fix issue in Safari where the canvas displays off screen

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -113,7 +113,8 @@ main {
     position: relative;
     flex: 1 0 0;
     overflow: hidden;
-    max-width: 100%;
+    height: 100%;
+    width: auto;
 }
 
 #canvasMain {
